testimonial , CTA banner , FAQ section design

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,3 +15,52 @@ a {
 * {
   box-sizing: border-box;
 }
+
+/* ******************Resume Slider style */
+.slick-dots {
+  position: absolute !important;
+  bottom: -40px !important;
+  margin-left: 15px !important;
+}
+.slick-dots li {
+  position: relative !important;
+  width: 10px !important;
+  margin: 0px 6px !important;
+}
+
+.slick-dots li button:before {
+  color: #121212 !important;
+  opacity: 1 !important;
+}
+
+.slick-dots li.slick-active button:before {
+  color: #fd6262 !important;
+  font-size: 10px !important;
+}
+
+/* custom input field */
+.customInput {
+  height: 40px;
+  width: 350px;
+  border: 2px solid #121212;
+  background: #f9f3ee;
+  box-shadow: 2px 2px 1px 1px #121212;
+  border-radius: 8px;
+  padding: 20px;
+  font-weight: 600;
+}
+.customInput:focus {
+  outline: none;
+  padding-left: 20px;
+}
+.customTextarea {
+  border: 2px solid #121212;
+  background: #f9f3ee;
+  box-shadow: 2px 2px 1px 1px #121212;
+  border-radius: 8px;
+  padding: 20px;
+  font-weight: 600;
+}
+.customTextarea:focus {
+  outline: none;
+}
