--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background-color: #ffebd6;
+  scroll-behavior: smooth;
 }
 
 a {
@@ -48,6 +49,7 @@ a {
   border-radius: 8px;
   padding: 20px;
   font-weight: 600;
+  margin-bottom: 0;
 }
 .customInput:focus {
   outline: none;
@@ -63,4 +65,21 @@ a {
 }
 .customTextarea:focus {
   outline: none;
+}
+@media screen and (max-width: 600px) {
+  .customInput {
+    height: 40px;
+    width: 100%;
+    border: 2px solid #121212;
+    background: #f9f3ee;
+    box-shadow: 2px 2px 1px 1px #121212;
+    border-radius: 8px;
+    padding: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+  }
+  .customInput:focus {
+    outline: none;
+    padding-left: 20px;
+  }
 }
